# retrofun

./: .env  .gitignore  README.md  db.py  exercices5.md  exercises1.md  exercises2.md  exercises3.md  exercises4.md  exercises5.md  import_articles.py  import_languages.py  import_orders.py  import_products.py  import_reviews.py  import_views.py  models.py  pyproject.toml
async_implementation/: .env  db.py  import_articles.py  import_languages.py  import_orders.py  import_products.py  import_reviews.py  import_views.py  models.py  pyproject.toml
async_implementation/migrations/: env.py
async_implementation/migrations/versions/: 26a34e82c776_initial_migration.py
async_implementation/src/async_implementation/: __init__.py
migrations/: env.py
migrations/versions/: 7a084282039e_products_manufacturers_countries.py  8524fdc70cdd_blog_integration.py  b685b83a6df9_product_reviews.py  b9d50a3173b0_customers_and_orders.py  f068e2daa468_multi_language_support.py
