[project]
name = "async-implementation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Eric Backhage", email = "eric.backhage@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "dotenv>=0.9.9",
    "sqlalchemy>=2.0.46",
]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"
